# imag

./: .travis.yml  Cargo.toml  README.md  default.nix  imagrc.toml
doc/src/: 03010-conventions.md  05100-lib-api.md  05100-lib-calendar.md  05100-lib-entryref.md  05100-lib-mails.md  05100-lib-rt.md  05100-lib-store.md  05100-lib-todo.md  09020-changelog.md
doc/user/: book.toml
doc/user/src/: SUMMARY.md  approach.md  conventions.md  examples.md  good-to-know.md  intro.md
lib/core/libimagerror/: Cargo.toml
lib/core/libimagerror/src/: exit.rs  io.rs  iter.rs  lib.rs  result.rs  trace.rs
lib/core/libimagrt/: Cargo.toml
lib/core/libimagrt/src/: application.rs  configuration.rs  iter.rs  lib.rs  logger.rs  runtime.rs  setup.rs
lib/core/libimagstore/: Cargo.toml
lib/core/libimagstore/src/: configuration.rs  iter.rs  store.rs  storeid.rs  util.rs
lib/core/libimagstore/src/file_abstraction/: fs.rs  inmemory.rs  iter.rs  mod.rs
lib/domain/libimagbookmark/: Cargo.toml
lib/domain/libimagbookmark/src/: collection.rs  lib.rs
lib/domain/libimagcalendar/: Cargo.toml
lib/domain/libimagcalendar/src/: event.rs  lib.rs  store.rs
lib/domain/libimagcontact/: Cargo.toml
lib/domain/libimagcontact/src/: contact.rs  iter.rs  lib.rs  store.rs
lib/domain/libimagdiary/: Cargo.toml
lib/domain/libimagdiary/src/: diary.rs  diaryid.rs  entry.rs  iter.rs  lib.rs  viewer.rs
lib/domain/libimaghabit/: Cargo.toml
lib/domain/libimaghabit/src/: habit.rs  instance.rs  iter.rs  store.rs  util.rs
lib/domain/libimaglog/: Cargo.toml
lib/domain/libimaglog/src/: lib.rs  log.rs
lib/domain/libimagmail/: Cargo.toml
lib/domain/libimagmail/src/: config.rs  hasher.rs  mail.rs  store.rs  util.rs
lib/domain/libimagnotes/: Cargo.toml
lib/domain/libimagnotes/src/: iter.rs  lib.rs  note.rs  notestore.rs
lib/domain/libimagtimetrack/: Cargo.toml
lib/domain/libimagtimetrack/src/: constants.rs  lib.rs  store.rs  timetracking.rs  timetrackingstore.rs
lib/domain/libimagtimetrack/src/iter/: create.rs  filter.rs  get.rs  setendtime.rs  storeid.rs  tag.rs
lib/domain/libimagtodo/: Cargo.toml
lib/domain/libimagtodo/src/: builder.rs  entry.rs  iter.rs  lib.rs  priority.rs  status.rs  store.rs  taskstore.rs
lib/domain/libimagwiki/: Cargo.toml
lib/domain/libimagwiki/src/: entry.rs  store.rs  wiki.rs
lib/entry/libimagentryannotation/: Cargo.toml
lib/entry/libimagentryannotation/src/: annotateable.rs  annotation_fetcher.rs
lib/entry/libimagentrycategory/: Cargo.toml
lib/entry/libimagentrycategory/src/: category.rs  entry.rs  iter.rs  lib.rs  store.rs
lib/entry/libimagentrydatetime/: Cargo.toml
lib/entry/libimagentrydatetime/src/: datetime.rs  lib.rs  range.rs
lib/entry/libimagentrydatetime/src/datepath/: compiler.rs  to_store_id.rs
lib/entry/libimagentryedit/: Cargo.toml
lib/entry/libimagentryedit/src/: edit.rs
lib/entry/libimagentryfilter/: Cargo.toml
lib/entry/libimagentryfilter/src/: lib.rs
lib/entry/libimagentryfilter/src/builtin/header/: field_eq.rs  field_exists.rs  field_grep.rs  field_gt.rs  field_isempty.rs  field_istype.rs  field_lt.rs  field_predicate.rs
lib/entry/libimagentryfilter/src/builtin/header/version/: eq.rs  gt.rs  lt.rs  range.rs
lib/entry/libimagentryfilter/src/tags/: mod.rs
lib/entry/libimagentrygps/: Cargo.toml
lib/entry/libimagentrygps/src/: entry.rs  lib.rs  types.rs
lib/entry/libimagentrylink/: Cargo.toml
lib/entry/libimagentrylink/src/: external.rs  internal.rs  iter.rs  lib.rs  link.rs  linkable.rs  linker.rs  storecheck.rs
lib/entry/libimagentrymarkdown/: Cargo.toml
lib/entry/libimagentrymarkdown/src/: html.rs  lib.rs  link.rs  processor.rs
lib/entry/libimagentryref/: Cargo.toml
lib/entry/libimagentryref/src/: hasher.rs  reference.rs  util.rs
lib/entry/libimagentrytag/: Cargo.toml
lib/entry/libimagentrytag/src/: lib.rs  tag.rs  tagable.rs
lib/entry/libimagentryurl/: Cargo.toml
lib/entry/libimagentryurl/src/: iter.rs  lib.rs  link.rs  linker.rs  util.rs
lib/entry/libimagentryutil/: Cargo.toml
lib/entry/libimagentryutil/src/: isa.rs  iter.rs  lib.rs
lib/entry/libimagentryview/: Cargo.toml
lib/entry/libimagentryview/src/: error.rs  lib.rs  viewer.rs
lib/entry/libimagentryview/src/builtin/: editor.rs  md.rs  plain.rs  stdout.rs
lib/etc/libimaginteraction/: Cargo.toml
lib/etc/libimaginteraction/src/: ask.rs  format.rs  ui.rs
lib/etc/libimagtimeui/: Cargo.toml
lib/etc/libimagtimeui/src/: date.rs  datetime.rs  time.rs
lib/etc/libimagutil/: Cargo.toml
lib/etc/libimagutil/src/: cli_validators.rs  date.rs  key_value_split.rs  testing.rs
libimagapi/: Cargo.toml  README.md
libimagapi/src/: cache.rs  error.rs  handle.rs  lib.rs  result.rs  store.rs  storeid.rs
libimagapi/src/store/: cache.rs  handle.rs  mod.rs
libimagentrycategory/: Cargo.toml
libimagentrycategory/src/: category.rs  lib.rs  register.rs
libimagentrylink/: Cargo.toml
libimagentrylink/src/: internal.rs  lib.rs
libimagentrymarkdown/src/: entry.rs
libimagerror/src/: error_gen.rs
libimagmail/: Cargo.toml
libimagmail/src/: linker.rs  mail.rs
libimagrt/: Cargo.toml
libimagrt/src/: configuration.rs  lib.rs  runtime.rs
libimagruby/: Cargo.toml  Makefile  Rakefile  imag.gemspec
libimagruby/lib/: imag.rb
libimagruby/lib/imag/: version.rb
libimagruby/src/: entry.rs  lib.rs  storeid.rs  toml_utils.rs
libimagruby/tests/: test_methods_present.rb  test_store_crud.rb
libimagstore/src/: configuration.rs  error.rs  store.rs
scripts/: gen-changelog  release.sh
scripts/hooks/: applypatch-msg.check-signed-off.sh
tests/ui/: Cargo.toml  README.md
tests/ui/src/: imag.rs  imag_category.rs  imag_create.rs  imag_grep.rs  imag_header.rs  imag_ids.rs  imag_init.rs  imag_mail.rs  imag_mv.rs  imag_tag.rs  lib.rs
tests/version-sync/: Cargo.toml
tests/version-sync/src/: lib.rs
