[workspace]
members = [
    ".imag-documentation",
    "bin",
    "imag-link",
    "imag-notes",
    "imag-ref",
    "imag-store",
    "imag-tag",
    "imag-view",
    "libimagannotation",
    "libimagapi",
    "libimagentryedit",
    "libimagentryfilter",
    "libimagentrylink",
    "libimagentrylist",
    "libimagentrymarkdown",
    "libimagentrytag",
    "libimagentryview",
    "libimagerror",
    "libimaginteraction",
    "libimagnotes",
    "libimagref",
    "libimagrt",
    "libimagstore",
    "libimagstorestdhook",
    "libimagtimeui",
    "libimagutil",
]
