[package]
name = "libimagrt"
version = "0.10.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../../../README.md"
license     = "LGPL-2.1"

documentation = "https://imag-pim.org/doc/"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[badges]
travis-ci                         = { repository = "matthiasbeyer/imag" }
is-it-maintained-issue-resolution = { repository = "matthiasbeyer/imag" }
is-it-maintained-open-issues      = { repository = "matthiasbeyer/imag" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
env_logger = "0.7"
toml = "0.5.1"
xdg-basedir = "1.0.0"
itertools = "0.8.0"
ansi_term = "0.11.0"
atty = "0.2.11"
failure        = "0.1.5"
failure_derive = "0.1.5"
serde_derive = "1.0.94"
serde = "1.0.94"

libimagstore       = { version = "0.10.0", path = "../../../lib/core/libimagstore" }
libimagerror       = { version = "0.10.0", path = "../../../lib/core/libimagerror" }
libimagutil        = { version = "0.10.0", path = "../../../lib/etc/libimagutil" }
libimaginteraction = { version = "0.10.0", path = "../../../lib/etc/libimaginteraction" }

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["suggestions", "color", "wrap_help"]

[dependencies.log]
version = "0.4.6"
default-features = false
features = ["std", "serde"]

[dependencies.handlebars]
version          = "1.1.0"
default-features = false
features         = ["no_logging"]

[dependencies.toml-query]
version = "0.9.2"
default-features = false
features = [ "typed" ]

[features]
default = []

# Make logger initialization inside `runtime::Runtime` public.
# This feature is _only_ used for the `imag` binary itself. You do not need this
# feature and if you think you do you're doing it wrong.
pub_logging_initialization = []

# Enable testing functionality. Used for building the libimagrt for testing CLI
# apps. Do not use in production!
testing = []

