[package]
name = "libimagstore"
version = "0.10.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../../../README.md"
license     = "LGPL-2.1"

documentation = "https://imag-pim.org/doc/"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[badges]
travis-ci                         = { repository = "matthiasbeyer/imag" }
is-it-maintained-issue-resolution = { repository = "matthiasbeyer/imag" }
is-it-maintained-open-issues      = { repository = "matthiasbeyer/imag" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
glob = "0.3.0"
log = "0.4.6"
regex = "1.1.7"
semver = "0.9.0"
toml = "0.5.1"
walkdir = "2.2.8"
is-match = "0.1.0"
serde = "1.0.94"
serde_json = "1.0.39"
toml-query = "0.9.2"
failure    = "0.1.5"

libimagerror = { version = "0.10.0", path = "../../../lib/core/libimagerror" }
libimagutil  = { version = "0.10.0", path = "../../../lib/etc/libimagutil" }

[dev-dependencies]
tempdir = "0.3.7"
env_logger = "0.7"

[features]
default = []
verify  = []

# Enable panic!()s if critical errors occur.
#
# # Howto
#
# To enable this, put
#
# ```toml
# [features]
# early-panic = [ "libimagstore/early-panic" ]
# ```
#
# In the crate depending on this library and compile your crate with
# `cargo build --features early-panic`. This way, the `libimagstore`
# implementation fails via `panic!()` instead of propagating errors which have
# to be printed somewhere to be visible.
#
# # WARNING
#
# The behaviour of the store implementation might be broken with this, resulting
# in partially written store entries and/or worse, so this is
#
#    _NOT INTENDED FOR PRODUCTION USE_!
#
early-panic=[]

# File system locking
#
# Enable this feature to enable file-system locking in the store.
fs-locking = []

