[package]
name = "libimagcontact"
version = "0.10.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../../../README.md"
license     = "LGPL-2.1"

documentation = "https://imag-pim.org/doc/"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[badges]
travis-ci                         = { repository = "matthiasbeyer/imag" }
is-it-maintained-issue-resolution = { repository = "matthiasbeyer/imag" }
is-it-maintained-open-issues      = { repository = "matthiasbeyer/imag" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
failure      = "0.1.5"
log          = "0.4.6"
toml         = "0.5.1"
toml-query   = "0.9.2"
vobject      = "0.7.0"
uuid         = "0.7.4"
serde        = "1.0.94"
serde_derive = "1.0.94"

libimagstore     = { version = "0.10.0", path = "../../../lib/core/libimagstore" }
libimagerror     = { version = "0.10.0", path = "../../../lib/core/libimagerror" }
libimagentryutil = { version = "0.10.0", path = "../../../lib/entry/libimagentryutil/" }
libimagentryref  = { version = "0.10.0", path = "../../../lib/entry/libimagentryref/" }

