[package]
name = "libimagtodo"
version = "0.10.0"
authors = ["mario <mario-krehl@gmx.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../../../README.md"
license     = "LGPL-2.1"

documentation = "https://imag-pim.org/doc/"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[badges]
travis-ci                         = { repository = "matthiasbeyer/imag" }
is-it-maintained-issue-resolution = { repository = "matthiasbeyer/imag" }
is-it-maintained-open-issues      = { repository = "matthiasbeyer/imag" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
failure      = "0.1"
filters      = "0.3"
log          = "0.4"
serde        = "1"
serde_derive = "1"
serde_json   = "1"
toml         = "0.5"

libimagstore = { version = "0.10.0", path = "../../../lib/core/libimagstore" }
libimagerror = { version = "0.10.0", path = "../../../lib/core/libimagerror" }
libimagentryutil  = { version = "0.10.0", path = "../../../lib/entry/libimagentryutil" }
libimagutil  = { version = "0.10.0", path = "../../../lib/etc/libimagutil" }

[dependencies.toml-query]
version = "0.9"
default-features = false
features = ["typed"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde"]

[dependencies.uuid]
version = "0.7"
default-features = false
features = ["serde", "v4"]

