[package]
name = "libimagentrylink"
version = "0.10.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../../../README.md"
license     = "LGPL-2.1"

documentation = "https://imag-pim.org/doc/"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[badges]
travis-ci                         = { repository = "matthiasbeyer/imag" }
is-it-maintained-issue-resolution = { repository = "matthiasbeyer/imag" }
is-it-maintained-open-issues      = { repository = "matthiasbeyer/imag" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
itertools = "0.8.0"
log = "0.4.6"
toml = "0.5.1"
url = "1.7.2"
sha-1 = "0.8.1"
hex = "0.3.2"
is-match = "0.1.0"
failure        = "0.1.5"
failure_derive = "0.1.5"
serde = "1.0.94"
serde_derive = "1.0.94"

libimagstore = { version = "0.10.0", path = "../../../lib/core/libimagstore" }
libimagerror = { version = "0.10.0", path = "../../../lib/core/libimagerror" }
libimagutil  = { version = "0.10.0", path = "../../../lib/etc/libimagutil" }

[dependencies.toml-query]
version = "0.9.2"
default-features = false
features = [ "typed" ]

[dev-dependencies]
env_logger = "0.6.1"

